Gjenbruker samme VilkårsPerioderTilVurderingTjeneste PSB/PLS, skiller ut egen VilkårKonfig