@@ -1,9 +1,7 @@
 package no.nav.k9.sak.ytelse.pleiepengerbarn.vilkår;
 
 import java.time.DayOfWeek;
-import java.util.ArrayList;
 import java.util.EnumMap;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NavigableSet;
@@ -13,12 +11,13 @@ import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
+import javax.enterprise.inject.Any;
+import javax.enterprise.inject.Instance;
 import javax.inject.Inject;
 
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
 import no.nav.fpsak.tidsserie.StandardCombinators;
-import no.nav.k9.felles.konfigurasjon.konfig.KonfigVerdi;
 import no.nav.k9.kodeverk.behandling.BehandlingÅrsakType;
 import no.nav.k9.kodeverk.vilkår.VilkårType;
 import no.nav.k9.sak.behandling.BehandlingReferanse;
@@ -32,14 +31,10 @@ import no.nav.k9.sak.behandlingslager.behandling.vilkår.Vilkår;
 import no.nav.k9.sak.behandlingslager.behandling.vilkår.VilkårResultatRepository;
 import no.nav.k9.sak.behandlingslager.behandling.vilkår.Vilkårene;
 import no.nav.k9.sak.behandlingslager.behandling.vilkår.periode.VilkårPeriode;
-import no.nav.k9.sak.domene.person.pdl.PersoninfoAdapter;
-import no.nav.k9.sak.domene.person.personopplysning.BasisPersonopplysningTjeneste;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
 import no.nav.k9.sak.inngangsvilkår.UtledeteVilkår;
-import no.nav.k9.sak.inngangsvilkår.VilkårUtleder;
 import no.nav.k9.sak.perioder.PeriodeMedÅrsak;
 import no.nav.k9.sak.perioder.VilkårsPerioderTilVurderingTjeneste;
-import no.nav.k9.sak.perioder.VilkårsPeriodiseringsFunksjon;
 import no.nav.k9.sak.typer.Periode;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.etablerttilsyn.ErEndringPåEtablertTilsynTjeneste;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.SykdomGrunnlagService;
@@ -52,15 +47,13 @@ import no.nav.pleiepengerbarn.uttak.kontrakter.Endringsstatus;
 import no.nav.pleiepengerbarn.uttak.kontrakter.Uttaksplan;
 
 @FagsakYtelseTypeRef("PSB")
+@FagsakYtelseTypeRef("PPN")
 @BehandlingTypeRef
 @ApplicationScoped
 public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioderTilVurderingTjeneste {
 
     private final PåTversAvHelgErKantIKantVurderer erKantIKantVurderer = new PåTversAvHelgErKantIKantVurderer();
 
-    private Map<VilkårType, VilkårsPeriodiseringsFunksjon> vilkårsPeriodisering = new HashMap<>();
-    private VilkårUtleder vilkårUtleder;
-    private SøktePerioder søktePerioder;
     private VilkårResultatRepository vilkårResultatRepository;
     private BehandlingRepository behandlingRepository;
     private SykdomGrunnlagService sykdomGrunnlagService;
@@ -70,25 +63,23 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
     private RevurderingPerioderTjeneste revurderingPerioderTjeneste;
     private SøknadsperiodeTjeneste søknadsperiodeTjeneste;
     private UttakTjeneste uttakTjeneste;
+    private Instance<PleiepengerVilkårKonfig> vilkårKonfiger;
 
     PSBVilkårsPerioderTilVurderingTjeneste() {
         // CDI
     }
 
     @Inject
-    public PSBVilkårsPerioderTilVurderingTjeneste(@FagsakYtelseTypeRef("PSB") VilkårUtleder vilkårUtleder,
+    public PSBVilkårsPerioderTilVurderingTjeneste(@Any Instance<PleiepengerVilkårKonfig> vilkårKonfiger,
                                                   VilkårResultatRepository vilkårResultatRepository,
                                                   BehandlingRepository behandlingRepository,
                                                   SykdomGrunnlagService sykdomGrunnlagService,
                                                   ErEndringPåEtablertTilsynTjeneste etablertTilsynTjeneste,
                                                   EndringUnntakEtablertTilsynTjeneste endringUnntakEtablertTilsynTjeneste,
-                                                  BasisPersonopplysningTjeneste basisPersonopplysningsTjeneste,
                                                   RevurderingPerioderTjeneste revurderingPerioderTjeneste,
-                                                  PersoninfoAdapter personinfoAdapter,
                                                   SøknadsperiodeTjeneste søknadsperiodeTjeneste,
-                                                  UttakTjeneste uttakTjeneste,
-                                                  @KonfigVerdi(value = "ENABLE_RELEVANT_SYKDOMSPERIODE", defaultVerdi = "false") boolean brukRelevantPeriode) {
-        this.vilkårUtleder = vilkårUtleder;
+                                                  UttakTjeneste uttakTjeneste) {
+        this.vilkårKonfiger = vilkårKonfiger;
         this.behandlingRepository = behandlingRepository;
         this.sykdomGrunnlagService = sykdomGrunnlagService;
         this.etablertTilsynTjeneste = etablertTilsynTjeneste;
@@ -97,13 +88,6 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
         this.vilkårResultatRepository = vilkårResultatRepository;
         this.søknadsperiodeTjeneste = søknadsperiodeTjeneste;
         this.uttakTjeneste = uttakTjeneste;
-
-        søktePerioder = new SøktePerioder(søknadsperiodeTjeneste);
-        var maksSøktePeriode = new MaksSøktePeriode(søknadsperiodeTjeneste);
-
-        vilkårsPeriodisering.put(VilkårType.MEDLEMSKAPSVILKÅRET, maksSøktePeriode);
-        vilkårsPeriodisering.put(VilkårType.MEDISINSKEVILKÅR_UNDER_18_ÅR, PleietrengendeAlderPeriode.under18(basisPersonopplysningsTjeneste, behandlingRepository, personinfoAdapter, søknadsperiodeTjeneste, brukRelevantPeriode));
-        vilkårsPeriodisering.put(VilkårType.MEDISINSKEVILKÅR_18_ÅR, PleietrengendeAlderPeriode.overEllerLik18(basisPersonopplysningsTjeneste, behandlingRepository, personinfoAdapter, søknadsperiodeTjeneste, brukRelevantPeriode));
     }
 
     @Override
@@ -112,8 +96,9 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
         var vilkårene = vilkårResultatRepository.hentHvisEksisterer(behandlingId).flatMap(it -> it.getVilkår(vilkårType));
         if (vilkårene.isPresent()) {
             return utledVilkårsPerioderFraPerioderTilVurdering(behandlingId, vilkårene.get(), perioder);
+        } else {
+            return perioder;
         }
-        return utledPeriode(behandlingId, vilkårType);
     }
 
     private NavigableSet<DatoIntervallEntitet> utledVilkårsPerioderFraPerioderTilVurdering(Long behandlingId, Vilkår vilkår, Set<DatoIntervallEntitet> perioder) {
@@ -187,7 +172,7 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
     @Override
     public Map<VilkårType, NavigableSet<DatoIntervallEntitet>> utledRådataTilUtledningAvVilkårsperioder(Long behandlingId) {
         final var vilkårPeriodeSet = new EnumMap<VilkårType, NavigableSet<DatoIntervallEntitet>>(VilkårType.class);
-        UtledeteVilkår utledeteVilkår = vilkårUtleder.utledVilkår(null);
+        UtledeteVilkår utledeteVilkår = getPleiepengerVilkårKonfig(behandlingId).getVilkårUtleder().utledVilkår(null);
         utledeteVilkår.getAlleAvklarte()
             .forEach(vilkår -> vilkårPeriodeSet.put(vilkår, utledPeriode(behandlingId, vilkår)));
 
@@ -229,7 +214,9 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
     }
 
     private NavigableSet<DatoIntervallEntitet> utledPeriode(Long behandlingId, VilkårType vilkår) {
-        return vilkårsPeriodisering.getOrDefault(vilkår, søktePerioder).utledPeriode(behandlingId);
+        var vilkårsPeriodisering = getPleiepengerVilkårKonfig(behandlingId).getVilkårsPeriodisering();
+        var defaultVilkårsperiodisering = getPleiepengerVilkårKonfig(behandlingId).getDefaultVilkårsperiodisering();
+        return vilkårsPeriodisering.getOrDefault(vilkår, defaultVilkårsperiodisering).utledPeriode(behandlingId);
     }
 
     @Override
@@ -285,7 +272,7 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
         var vedtattSykdomGrunnlagBehandling = sykdomGrunnlagService.hentGrunnlag(forrigeVedtatteBehandling);
         var pleietrengende = referanse.getPleietrengendeAktørId();
         var vilkårene = vilkårResultatRepository.hent(referanse.getId());
-        var vurderingsperioder = utledVurderingsperiode(vilkårene);
+        var vurderingsperioder = utledVurderingsperiode(vilkårene, referanse.getBehandlingId());
 
         var utledetGrunnlag = sykdomGrunnlagService.utledGrunnlagMedManglendeOmsorgFjernet(referanse.getSaksnummer(), referanse.getBehandlingUuid(), referanse.getBehandlingId(), pleietrengende, vurderingsperioder);
 
@@ -303,8 +290,8 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
     }
 
     @Override
-    public Set<VilkårType> definerendeVilkår() {
-        return Set.of(VilkårType.MEDISINSKEVILKÅR_UNDER_18_ÅR, VilkårType.MEDISINSKEVILKÅR_18_ÅR);
+    public Set<VilkårType> definerendeVilkår(Long behandlingId) {
+        return getPleiepengerVilkårKonfig(behandlingId).definerendeVilkår();
     }
 
     @Override
@@ -317,23 +304,19 @@ public class PSBVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioder
             .collect(Collectors.toCollection(TreeSet::new));
     }
 
-    private List<Periode> utledVurderingsperiode(Vilkårene vilkårene) {
-        var vurderingsperioder = vilkårene.getVilkår(VilkårType.MEDISINSKEVILKÅR_UNDER_18_ÅR)
-            .map(Vilkår::getPerioder)
-            .orElse(List.of())
-            .stream()
-            .map(VilkårPeriode::getPeriode)
-            .map(it -> new Periode(it.getFomDato(), it.getTomDato()))
-            .collect(Collectors.toCollection(ArrayList::new));
+    private List<Periode> utledVurderingsperiode(Vilkårene vilkårene, Long behandlingId) {
+        var definerendeVilkår = definerendeVilkår(behandlingId);
 
-        vurderingsperioder.addAll(vilkårene.getVilkår(VilkårType.MEDISINSKEVILKÅR_18_ÅR)
-            .map(Vilkår::getPerioder)
-            .orElse(List.of())
-            .stream()
+        return definerendeVilkår.stream()
+            .flatMap(vt -> vilkårene.getVilkår(vt).stream())
+            .flatMap(v -> v.getPerioder().stream())
             .map(VilkårPeriode::getPeriode)
-            .map(it -> new Periode(it.getFomDato(), it.getTomDato()))
-            .collect(Collectors.toList()));
+            .map(p -> new Periode(p.getFomDato(), p.getTomDato()))
+            .toList();
+    }
 
-        return vurderingsperioder;
+    private PleiepengerVilkårKonfig getPleiepengerVilkårKonfig(Long behandlingId) {
+        var behandling = behandlingRepository.hentBehandling(behandlingId);
+        return PleiepengerVilkårKonfig.finnVilkårKonfig(vilkårKonfiger, behandling.getFagsakYtelseType());
     }
 }
